Created a better algorithm for the map creation